Add MainActivity.kt with SessionsFragment.kt and ScannerFragment.kt

--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">WalletConnect</string>
+    <string name="app_name">WalletConnect Sample</string>
+    <string name="qrCode">QrCode</string>
 </resources>
