Example app UI in progress

--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">WalletConnect Sample</string>
     <string name="qrCode">QrCode</string>
     <string name="ok">Ok</string>
+    <string name="wallet">Wallet</string>
+    <string name="dapp">Dapp</string>
 </resources>
