--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="ok">Ok</string>
     <string name="wallet">Wallet</string>
     <string name="dapp">Dapp</string>
+    <string name="connect">Connect</string>
+    <string name="chains">Chains</string>
+    <string name="methods">Methods</string>
+    <string name="reject">Reject</string>
+    <string name="approve">Approve</string>
 </resources>
