--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="methods">Methods</string>
     <string name="reject">Reject</string>
     <string name="approve">Approve</string>
+    <string name="paste">Paste Uri</string>
 </resources>
