--- a/sample/src/main/res/values/strings.xml
+++ b/sample/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="reject">Reject</string>
     <string name="approve">Approve</string>
     <string name="paste">Paste Uri</string>
+    <string name="paste_uri_hint">Paste Uri...</string>
 </resources>
